--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,16 +27,6 @@
 @import "./example";
 
 @import "./base";
-@import "./variables";
+@import "./variebles";
 
-@import "./header";
-@import "./hero";
-@import "./3d-modeling";
-@import "./3d-printing";
 @import "./3d-scanning";
-@import "./contacts-section";
-@import "./gallery";
-@import "./more-photo";
-@import "./order-form-contacts";
-@import "./take-order";
-@import "./footer";
